--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,17 +226,13 @@ nav.navbar {
     padding: 0;
   }
 
-  .navbar.sticky .container{
-    padding: 0 20px;
-  }
-
   .navbar-toggler:focus {
     box-shadow: none;
   }
 
   .navbar-nav {
     background: #0d354b;
-    padding: 20px 20px 50px;
+    padding: 20px 20px 50px! important;
   }
 
   .navbar.sticky .navbar-nav {
